syntax = "proto3";

package review;

option go_package = "github.com/Prototype-1/freelanceX_user_service/proto/review";

service ReviewService {
  rpc SubmitReview(ReviewRequest) returns (ReviewResponse);
  rpc GetFreelancerReviews(GetReviewRequest) returns (ReviewListResponse);
}

message ReviewRequest {
  string project_id = 1;
  string freelancer_id = 2;
  string client_id = 3;
  int32 rating = 4;
  string feedback = 5;
}

message ReviewResponse {
  string id = 1;
  string project_id = 2;
  string freelancer_id = 3;
  string client_id = 4;
  int32 rating = 5;
  string feedback = 6;
  string created_at = 7;
}

message GetReviewRequest {
  string freelancer_id = 1;
}

message ReviewListResponse {
  repeated ReviewResponse reviews = 1;
}
